test_deps = declare_dependency(compile_args: geany_cflags, dependencies: [deps, dep_libgeany])

ctags_tests= files(['ctags/1795612.js.tags',
                    'ctags/1850914.js.tags',
                    'ctags/1878155.js.tags',
                    'ctags/1880687.js.tags',
                    'ctags/2023624.js.tags',
                    'ctags/3184782.sql.tags',
                    'ctags/3470609.js.tags',
                    'ctags/3526726.tex.tags',
                    'ctags/68hc11.asm.tags',
                    'ctags/actionscript/as-first-token.as.tags',
                    'ctags/actionscript/classes.as.tags',
                    'ctags/actionscript/const2.as.tags',
                    'ctags/actionscript/const.as.tags',
                    'ctags/actionscript/method-attributes.as.tags',
                    'ctags/actionscript/packages.as.tags',
                    'ctags/actionscript/sampler.as.tags',
                    'ctags/angle_bracket.cpp.tags',
                    'ctags/anonymous_functions.php.tags',
                    'ctags/arraylist.js.tags',
                    'ctags/array_ref_and_out.cs.tags',
                    'ctags/array_spec.f90.tags',
                    'ctags/array-spec.f90.tags',
                    'ctags/attributes.cs.tags',
                    'ctags/auto.f.tags',
                    'ctags/backslashes.c.tags',
                    'ctags/bit_field.c.tags',
                    'ctags/block.f90.tags',
                    'ctags/bracematch.js.tags',
                    'ctags/bug1020715.cpp.tags',
                    'ctags/bug1020715.c.tags',
                    'ctags/bug1086609.c.tags',
                    'ctags/bug1093123.cpp.tags',
                    'ctags/bug1111214-j-chan.v.tags',
                    'ctags/bug1111214.v.tags',
                    'ctags/bug1201689.c.tags',
                    'ctags/bug1447756.java.tags',
                    'ctags/bug1458930.c.tags',
                    'ctags/bug1466117.c.tags',
                    'ctags/bug1491666.c.tags',
                    'ctags/bug1515910.cs.tags',
                    'ctags/bug1548443.cpp.tags',
                    'ctags/bug1563476.cpp.tags',
                    'ctags/bug1570779.sql.tags',
                    'ctags/bug1575055.cpp.tags',
                    'ctags/bug1585745.cpp.tags',
                    'ctags/bug1611054.cs.tags',
                    'ctags/bug1691412.java.tags',
                    'ctags/bug1742588.rb.tags',
                    'ctags/bug1743330.v.tags',
                    'ctags/bug1764143.h.tags',
                    'ctags/bug1764148.py.tags',
                    'ctags/bug1770479.cpp.tags',
                    'ctags/bug1773926.cpp.tags',
                    'ctags/bug1777344.java.tags',
                    'ctags/bug1799340.cpp.tags',
                    'ctags/bug1799343-1.cpp.tags',
                    'ctags/bug1799343-2.cpp.tags',
                    'ctags/bug1800065.cs.tags',
                    'ctags/bug1809024.py.tags',
                    'ctags/bug1830343.cs.tags',
                    'ctags/bug1830344.cs.tags',
                    'ctags/bug1856363.py.tags',
                    'ctags/bug1906062.py.tags',
                    'ctags/bug1907083.cpp.tags',
                    'ctags/bug1924919.cpp.tags',
                    'ctags/bug1938565.sql.tags',
                    'ctags/bug1944150.sql.tags',
                    'ctags/bug1950327.js.tags',
                    'ctags/bug1988026.py.tags',
                    'ctags/bug1988027.py.tags',
                    'ctags/bug1988130.py.tags',
                    'ctags/bug2049723.java.tags',
                    'ctags/bug2075402.py.tags',
                    'ctags/bug2117073.java.tags',
                    'ctags/bug2374109.vhd.tags',
                    'ctags/bug2411878.cs.tags',
                    'ctags/bug2747828.v.tags',
                    'ctags/bug2777310.js.tags',
                    'ctags/bug2781264.rb.tags',
                    'ctags/bug2886870.tex.tags',
                    'ctags/bug2888482.js.tags',
                    'ctags/bug3036476.js.tags',
                    'ctags/bug3168705.py.tags',
                    'ctags/bug3571233.js.tags',
                    'ctags/bug507864.c.tags',
                    'ctags/bug538629.asm.tags',
                    'ctags/bug556645.c.tags',
                    'ctags/bug556646.c.tags',
                    'ctags/bug565813.f90.tags',
                    'ctags/bug612019.pas.tags',
                    'ctags/bug612621.pl.tags',
                    'ctags/bug620288.f.tags',
                    'ctags/bug639639.h.tags',
                    'ctags/bug639644.hpp.tags',
                    'ctags/bug665086.cpp.tags',
                    'ctags/bug670433.f90.tags',
                    'ctags/bug699171.py.tags',
                    'ctags/bug722501.sql.tags',
                    'ctags/bug726712.f90.tags',
                    'ctags/bug726875.f90.tags',
                    'ctags/bug734933.f90.tags',
                    'ctags/bug762027.v.tags',
                    'ctags/bug814263.java.tags',
                    'ctags/bug823000.sql.tags',
                    'ctags/bug842077.pl.tags',
                    'ctags/bug849591.cpp.tags',
                    'ctags/bug852368.cpp.tags',
                    'ctags/bug858165.f90.tags',
                    'ctags/bug872494.cpp.tags',
                    'ctags/bug877956.f90.tags',
                    'ctags/bug960316.v.tags',
                    'ctags/bug961001.v.tags',
                    'ctags/byte.f.tags',
                    'ctags/c-digraphs.c.tags',
                    'ctags/c-trigraphs.c.tags',
                    'ctags/case_sensitivity.php.tags',
                    'ctags/char-selector.f90.tags',
                    'ctags/classes.php.tags',
                    'ctags/cobol/helloworld.cbl.tags',
                    'ctags/cobol/helloworld2.cbl.tags',
                    'ctags/cobol/levels.cbl.tags',
                    'ctags/cobol/quoted-program-id.cbl.tags',
                    'ctags/cobol/simple.cbl.tags',
                    'ctags/common.f.tags',
                    'ctags/complex-return.js.tags',
                    'ctags/continuation.f90.tags',
                    'ctags/continuation.mak.tags',
                    'ctags/countall.sql.tags',
                    'ctags/cpp_destructor.cpp.tags',
                    'ctags/css-at-rules.css.tags',
                    'ctags/css-at-supports.css.tags',
                    'ctags/css-attribute-selectors.css.tags',
                    'ctags/css-comma-no-space.css.tags',
                    'ctags/css-namespace-selectors.css.tags',
                    'ctags/css-pseudo-classes.css.tags',
                    'ctags/css-simple.css.tags',
                    'ctags/css-singlequote-in-comment-issue2.css.tags',
                    'ctags/css-tag-types.css.tags',
                    'ctags/css-trivial.css.tags',
                    'ctags/cython_sample.pyx.tags',
                    'ctags/cython_sample2.pyx.tags',
                    'ctags/cxx11enum.cpp.tags',
                    'ctags/cxx11-final.cpp.tags',
                    'ctags/cxx11-noexcept.cpp.tags',
                    'ctags/cxx11-override.cpp.tags',
                    'ctags/cxx11-raw-strings.cpp.tags',
                    'ctags/cxx14-combined.cpp.tags',
                    'ctags/db-trig.sql.tags',
                    'ctags/debian_432872.f90.tags',
                    'ctags/directives.c.tags',
                    'ctags/dopbl2.f.tags',
                    'ctags/dotted-names.json.tags',
                    'ctags/enum.c.tags',
                    'ctags/enum.f90.tags',
                    'ctags/enum.java.tags',
                    'ctags/enumerators.f90.tags',
                    'ctags/events.cs.tags',
                    'ctags/extern_variable.h.tags',
                    'ctags/forall_module.f90.tags',
                    'ctags/format.pl.tags',
                    'ctags/fortran_associate.f90.tags',
                    'ctags/fortran_line_continuation.f90.tags',
                    'ctags/func_typedef.h.tags',
                    'ctags/geany.nsi.tags',
                    'ctags/general.cs.tags',
                    'ctags/hex2dec.sql.tags',
                    'ctags/implied_program.f.tags',
                    'ctags/indexer.cs.tags',
                    'ctags/infinite_loop.java.tags',
                    'ctags/ingres_procedures.sql.tags',
                    'ctags/initialization.f90.tags',
                    'ctags/interface_indexers.cs.tags',
                    'ctags/interface_properties.cs.tags',
                    'ctags/interfaces.f90.tags',
                    'ctags/internal.cs.tags',
                    'ctags/intro_orig.tex.tags',
                    'ctags/intro.tex.tags',
                    'ctags/invalid_name.f90.tags',
                    'ctags/java_enum.java.tags',
                    'ctags/js-broken-strings.js.tags',
                    'ctags/js-class-related-unterminated.js.tags',
                    'ctags/js-const.js.tags',
                    'ctags/js-implicit-semicolons.js.tags',
                    'ctags/js-let.js.tags',
                    'ctags/js-scope.js.tags',
                    'ctags/js-signature.js.tags',
                    'ctags/js-string-continuation.js.tags',
                    'ctags/js-sub-block-scope.js.tags',
                    'ctags/js-unknown-construct-nesting.js.tags',
                    'ctags/jsFunc_tutorial.js.tags',
                    'ctags/keyword_abstract.cs.tags',
                    'ctags/keyword_catch_try.cs.tags',
                    'ctags/keyword_class.cs.tags',
                    'ctags/keyword_const.cs.tags',
                    'ctags/keyword_delegate.cs.tags',
                    'ctags/keyword_enum.cs.tags',
                    'ctags/keyword_event.cs.tags',
                    'ctags/keyword_explicit.cs.tags',
                    'ctags/keyword_extern.cs.tags',
                    'ctags/keyword_implicit.cs.tags',
                    'ctags/keyword_interface.cs.tags',
                    'ctags/keyword_namespace.cs.tags',
                    'ctags/keyword_names.f90.tags',
                    'ctags/keyword_out.cs.tags',
                    'ctags/keyword_override.cs.tags',
                    'ctags/keyword_params.cs.tags',
                    'ctags/keyword_private.cs.tags',
                    'ctags/keyword_protected.cs.tags',
                    'ctags/keyword_public.cs.tags',
                    'ctags/keyword_sealed.cs.tags',
                    'ctags/keyword_static.cs.tags',
                    'ctags/keyword_struct.cs.tags',
                    'ctags/keyword_virtual.cs.tags',
                    'ctags/keyword_volatile.cs.tags',
                    'ctags/labels.sql.tags',
                    'ctags/lanus.for.tags',
                    'ctags/line_directives.c.tags',
                    'ctags/local.c.tags',
                    'ctags/macros.c.tags',
                    'ctags/make-comment-in-rule.mak.tags',
                    'ctags/make-gnumake-pattern-rules.mak.tags',
                    'ctags/make-multi-target.mak.tags',
                    'ctags/make-parentheses.mak.tags',
                    'ctags/make-target-with-parentheses.mak.tags',
                    'ctags/make-variable-on-cmdline.mak.tags',
                    'ctags/masm.asm.tags',
                    'ctags/matlab_backtracking.m.tags',
                    'ctags/matlab_test.m.tags',
                    'ctags/maze.erl.tags',
                    'ctags/members.f90.tags',
                    'ctags/misc_types.f90.tags',
                    'ctags/misc_types.f.tags',
                    'ctags/mode.php.tags',
                    'ctags/moniker.x68.asm.tags',
                    'ctags/namelist.f.tags',
                    'ctags/namespace.cpp.tags',
                    'ctags/namespaces2.php.tags',
                    'ctags/namespaces.php.tags',
                    'ctags/no_terminator.js.tags',
                    'ctags/non-ascii-ident1.php.tags',
                    'ctags/numlib.f90.tags',
                    'ctags/objectivec_implementation.mm.tags',
                    'ctags/objectivec_interface.mm.tags',
                    'ctags/objectivec_property.mm.tags',
                    'ctags/objectivec_protocol.mm.tags',
                    'ctags/Package.pm.tags',
                    'ctags/php5_5_class_kw.php.tags',
                    'ctags/parenthesis-rvalue.js.tags',
                    'ctags/preprocessor.f90.tags',
                    'ctags/procedure_pointer_module.f90.tags',
                    'ctags/procpoint.f90.tags',
                    'ctags/property.cs.tags',
                    'ctags/prototype.h.tags',
                    'ctags/pure_elem.f95.tags',
                    'ctags/py_constructor_arglist.py.tags',
                    'ctags/py-skipped-string.py.tags',
                    'ctags/python-anonymous-nestlevel_ctags-bug-356.py.tags',
                    'ctags/python-comments.py.tags',
                    'ctags/qualified_types.f90.tags',
                    'ctags/random.sql.tags',
                    'ctags/readlob.sql.tags',
                    'ctags/readlong.sql.tags',
                    'ctags/recursive.f95.tags',
                    'ctags/refcurs.sql.tags',
                    'ctags/regexp.js.tags',
                    'ctags/return-hint.zep.tags',
                    'ctags/return-types.go.tags',
                    'ctags/ruby-block-call.rb.tags',
                    'ctags/ruby-doc.rb.tags',
                    'ctags/ruby-namespaced-class.rb.tags',
                    'ctags/ruby-scope-after-anonymous-class.rb.tags',
                    'ctags/ruby-sf-bug-364.rb.tags',
                    'ctags/rules.t2t.tags',
                    'ctags/sample.t2t.tags',
                    'ctags/secondary_fcn_name.js.tags',
                    'ctags/semicolon.f90.tags',
                    'ctags/shebang.js.tags',
                    'ctags/signature.cpp.tags',
                    'ctags/simple.abc.tags',
                    'ctags/simple.asciidoc.tags',
                    'ctags/simple.bas.tags',
                    'ctags/simple.conf.tags',
                    'ctags/simple.d.tags',
                    'ctags/simple.diff.tags',
                    'ctags/simple.docbook.tags',
                    'ctags/simple.hs.tags',
                    'ctags/simple.hx.tags',
                    'ctags/simple.html.tags',
                    'ctags/simple.inp.tags',
                    'ctags/simple.js.tags',
                    'ctags/simple.json.tags',
                    'ctags/simple.ksh.tags',
                    'ctags/simple.lua.tags',
                    'ctags/simple.mak.tags',
                    'ctags/simple.md.tags',
                    'ctags/simple.php.tags',
                    'ctags/simple.pl.tags',
                    'ctags/simple.ps1.tags',
                    'ctags/simple.py.tags',
                    'ctags/simple.rb.tags',
                    'ctags/simple.rst.tags',
                    'ctags/simple.sh.tags',
                    'ctags/simple.tcl.tags',
                    'ctags/simple.vala.tags',
                    'ctags/simple.zep.tags',
                    'ctags/size_t_wchar_t_alias.d.tags',
                    'ctags/size_t_wchar_t_typedef.c.tags',
                    'ctags/spurious_label_tags.c.tags',
                    'ctags/sql_single_quote.sql.tags',
                    'ctags/square_parens.f90.tags',
                    'ctags/state_machine.v.tags',
                    'ctags/static_array.c.tags',
                    'ctags/stdcall.f.tags',
                    'ctags/strings.php.tags',
                    'ctags/strings.rb.tags',
                    'ctags/structure.f.tags',
                    'ctags/tabindent.py.tags',
                    'ctags/test.erl.tags',
                    'ctags/test.go.tags',
                    'ctags/test.py.tags',
                    'ctags/test.vhd.tags',
                    'ctags/test_input.rs.tags',
                    'ctags/test_input2.rs.tags',
                    'ctags/titles.t2t.tags',
                    'ctags/traffic_signal.v.tags',
                    'ctags/traits.php.tags',
                    'ctags/ui5.controller.js.tags',
                    'ctags/union.f.tags',
                    'ctags/value.f.tags',
                    'ctags/var-and-return-type.cpp.tags',
                    'ctags/whitespaces.php.tags'])

runner = find_program('ctags/runner.sh')
foreach t : ctags_tests
    test('@0@'.format(t), runner,
         args: [join_paths(meson.build_root(), 'geany'), t],
         env: ['top_srcdir='+meson.source_root(), 'top_builddir='+meson.build_root()])
endforeach

process_order_sources = files(['ctags/process_order.c.tags',
                               'ctags/process_order_1.h',
                               'ctags/process_order_2.h'])
test('ctags/processing-order', runner,
     args: [join_paths(meson.build_root(), 'geany'), '--result', process_order_sources],
     env: ['top_srcdir='+meson.source_root(), 'top_builddir='+meson.build_root()])
test('utils', executable('test_utils', 'test_utils.c', dependencies: test_deps))
