iconsdir = $(datadir)/icons/hicolor/16x16/apps
icons_DATA =  	                                    			\
	classviewer-class.png						\
	classviewer-macro.png						\
	classviewer-member.png						\
	classviewer-method.png						\
	classviewer-namespace.png					\
	classviewer-other.png						\
	classviewer-struct.png						\
	classviewer-var.png						
		
EXTRA_DIST = 								\
	$(icons_DATA)
