iconsdir = $(datadir)/icons/hicolor/16x16
icons_appsdir = $(iconsdir)/apps
icons_actionsdir = $(iconsdir)/actions

dist_icons_apps_DATA =							\
	classviewer-class.png						\
	classviewer-macro.png						\
	classviewer-member.png						\
	classviewer-method.png						\
	classviewer-namespace.png					\
	classviewer-other.png						\
	classviewer-struct.png						\
	classviewer-var.png							\
	geany.png

dist_icons_actions_DATA =						\
	geany-build.png								\
	geany-close-all.png							\
	geany-save-all.png
