## Process this file with automake to produce Makefile.in

scintilla_INCLUDES = \
	Accessor.h \
	KeyWords.h \
	Platform.h \
	PropSet.h \
	SciLexer.h \
	Scintilla.h \
	ScintillaWidget.h \
	WindowAccessor.h \
	SString.h 


EXTRA_DIST =  $(scintilla_INCLUDES) \
	Face.py \
	HFacer.py \
	Scintilla.iface

