## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	Accessor.h \
	KeyWords.h \
	Platform.h \
	PropSet.h \
	Scintilla.iface \
	WindowAccessor.h \
	SString.h

scintilla_includedir = $(includedir)/geany/scintilla/
scintilla_include_HEADERS = \
	SciLexer.h \
	Scintilla.h \
	ScintillaWidget.h
