## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	Accessor.h \
	KeyWords.h \
	Platform.h \
	PropSet.h \
	WindowAccessor.h \
	SString.h

scintilla_includedir = $(includedir)/geany/scintilla/
scintilla_include_HEADERS = \
	SciLexer.h \
	Scintilla.h \
	Scintilla.iface \
	ScintillaWidget.h
